--- a/Pipfile
+++ b/Pipfile
@@ -5,10 +5,11 @@ name = "pypi"
 
 [packages]
 django = "*"
+djangorestframework = "*"
+django-cors = "*"
+django-cors-headers = "*"
 
 [dev-packages]
 
 [requires]
 python_version = "3.11"
-
-
